--- a/app/src/css/Header.css
+++ b/app/src/css/Header.css
@@ -7,7 +7,7 @@
   flex: 1;
 }
 
-.drawer > .MuiDrawer-paperAnchorLeft-86{
+.drawer > div{
   width: 250px;
   background-color: #e8e8e8;
   bottom: 0;
