--- a/app/src/css/Layout.css
+++ b/app/src/css/Layout.css
@@ -13,3 +13,17 @@
   opacity: 0.75;
   display: block;
 }
+
+.card-actions {
+  display: flex;
+}
+
+.card-actions .expand-ico {
+  transform: rotate(0deg);
+  transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  margin-left: auto;
+}
+
+.card-actions .expand-ico.expand-open {
+  transform: rotate(180deg);
+}
